--- a/views/user.ejs
+++ b/views/user.ejs
@@ -1,7 +1,7 @@
 <%- include header %>
 <% posts.forEach(function (post, index) { %>
 <p>
-  <h2><a href="u/<%= post.name %>/<%= post.time.day %>/<%= post.title %>">
+  <h2><a href="/u/<%= post.name %>/<%= post.time.day %>/<%= post.title %>">
       <%= post.title %></a></h2>
 </p>
 <p class="info">
@@ -10,21 +10,14 @@
   日期：
   <%= post.time.minute %> |
   标签：
-  <% if (post.tags) { %>
   <% post.tags.forEach(function (tag, index) { %>
   <% if (tag) { %>
   <a class="tag" href="/tags/<%= tag %>">
     <%= tag %></a>
   <% } %>
   <% }) %>
-  <% } %>
 </p>
-<p>
-  <%- post.post %>
-  <p class="info">阅读：
-    <%= post.pv %> | 评论：
-    <%= post.comments.length %>
-  </p>
+<%- post.post %>
 </p>
 <% }) %>
 <%- include paging %>
