--- a/views/article.ejs
+++ b/views/article.ejs
@@ -1,8 +1,26 @@
 <%- include header %>
 <p>
   <% if (user && (user.name == post.name)) { %>
-  <span><a class="edit" href="/edit/<%= post.name %>/<%= post.time.day %>/<%= post.title %>">编辑</a></span>
-  <span><a class="edit" href="/remove/<%= post.name %>/<%= post.time.day %>/<%= post.title %>">删除</a></span>
+  <span><a class="edit" href="/p/edit/<%= post._id %>">编辑</a></span>
+  <span><a class="remove" href="/p/remove/<%= post._id %>">删除</a></span>
+  <% } %>
+  <% var flag = 1 %>
+  <% if (user && (user.name != post.name)) { %>
+  <% if ((post.reprint_info.reprint_from != undefined) && (user.name == post.reprint_info.reprint_from.name)) { %>
+  <% flag = 0 %>
+  <% } %>
+  <% if ((post.reprint_info.reprint_to != undefined)) { %>
+  <% post.reprint_info.reprint_to.forEach(function (reprint_to, index) { %>
+  <% if (user.name == reprint_to.name) { %>
+  <% flag = 0 %>
+  <% } %>
+  <% }) %>
+  <% } %>
+  <% } else { %>
+  <% flag = 0 %>
+  <% } %>
+  <% if (flag) { %>
+  <span><a class="edit" href="/reprint/<%= post.name %>/<%= post.time.day %>/<%= post.title %>">转载</a></span>
   <% } %>
 </p>
 <p class="info">
@@ -19,6 +37,15 @@
   <% } %>
   <% }) %>
   <% } %>
+  <% if (post.reprint_info && post.reprint_info.reprint_from) { %>
+  <br><a href="/u/<%= post.reprint_info.reprint_from.name %>/<%= post.reprint_info.reprint_from.day %>/<%= post.reprint_info.reprint_from.title %>">原文链接</a>
+  <% } %>
+</p>
+<p class="info">
+  阅读：
+  <%= post.pv %> |
+  评论：
+  <%= post.comments.length %> 
 </p>
 <p>
   <%- post.post %>
