--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,10 @@
 <%- include header %>
 <% posts.forEach(function (post, index) { %>
 <p>
-  <h2><a href="u/<%= post.name %>/<%= post.time.day %>/<%= post.title %>">
-      <%= post.title %></a></h2>
+  <h2>
+    <a href="/p/<%= post._id %>"><%= post.title %></a>
+    <a href="/u/<%= post.name %>"><img src="<%= post.head %>" class="r_head" /></a>
+  </h2>
 </p>
 <p class="info">
   作者：<a href="/u/<%= post.name %>">
@@ -18,13 +20,15 @@
   <% } %>
   <% }) %>
   <% } %>
+  <% if (post.reprint_info && post.reprint_info.reprint_from) { %>
+  <br><a href="/u/<%= post.reprint_info.reprint_from.name %>/<%= post.reprint_info.reprint_from.day %>/<%= post.reprint_info.reprint_from.title %>">原文链接</a>
+  <% } %>
 </p>
-<p>
-  <%- post.post %>
-  <p class="info">阅读：
-    <%= post.pv %> | 评论：
-    <%= post.comments.length %>
-  </p>
+<p class="info">
+  阅读：
+  <%= post.pv %> |
+  评论：
+  <%= post.comments.length %> 
 </p>
 <% }) %>
 <%- include paging %>
