--- a/views/tag.ejs
+++ b/views/tag.ejs
@@ -11,7 +11,7 @@
   <% lastYear = post.time.year } %>
   <li><time>
       <%= post.time.day %></time></li>
-  <li><a href="/u/<%= post.name %>/<%= post.time.day %>/<%= post.title %>">
+  <li><a href="/p/<%= post._id %>">
       <%= post.title %></a></li>
   <% }) %>
 </ul>
